--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^16.1.0
+  font_awesome_flutter: ^10.0.0 
   flutter_riverpod: ^2.6.1
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +65,9 @@ flutter:
   assets:
     - lib/assets/images/glauk-logo.png
     - lib/assets/images/glauk-logo-removebg-preview.png
+    - lib/assets/images/study-group.jpg
+    - lib/assets/images/graduates.jpg
+    - lib/assets/images/upload-file.jpg
     - lib/assets/images/google-icon.png
     - lib/assets/images/book-icon.png
     - lib/assets/images/course-image.png
