--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.0.0 
   flutter_riverpod: ^2.6.1
   confetti: ^0.8.0
+  cached_network_image: ^3.4.1
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
