--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   confetti: ^0.8.0
   cached_network_image: ^3.4.1
   convex_bottom_bar: ^3.2.0
+  glassmorphism_ui: ^0.3.0
+  step_progress_indicator: ^1.0.2
 
 dev_dependencies:
   flutter_test:
